# Xadrez

./: .env.example  .gitignore  .replit  DEPLOY.md  README.md  auth.py  availability.py  build.sh  exemplo_competidores.csv  export_csv.py  main.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  seed.py  tournament.py
attached_assets/: Pasted-Crie-um-sistema-web-completo-para-o-Torneio-de-Xadrez-SENAI-Morvan-Figueiredo-com-as-seguintes-c-1761509893913_1761509893914.txt
templates/: admin.html  index.html  login.html  public.html
